--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -17,6 +17,10 @@
   text-size-adjust: 100%;
 }
 
+input {
+  all: unset;
+}
+
 #root {
   margin: 0 auto;
   padding: 2rem;
@@ -64,15 +68,6 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-}
-
-button:hover {
-  border-color: #646cff;
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
