--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
 @import "breakpoints";
 @import "globals";
 @import "variables";
-
-// Components
 @import "../pages/Login/LoginPage";
+@import "../components/form-elements/Field/Field.scss";
+@import "../components/Button/Button.scss";
