--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,3 +4,4 @@ $color-grey_input: #d2d0dc;
 $primary-color-disable: #4318f280;
 $primary-color-default: #4315f2;
 $primary-color-hover: #5d35ff;
+$error-color: #ea334d;
