--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,4 +1,4 @@
-.default {
+.button {
   margin: 0;
   outline: none;
   border: none;
@@ -8,7 +8,10 @@
 }
 
 .small {
-  width: auto;
+  svg {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .bright {
