--- a/src/pages/Login/LoginPage.scss
+++ b/src/pages/Login/LoginPage.scss
@@ -1,58 +1,76 @@
-.container {
+.login-page {
   position: relative;
-  display: block;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 40px 24px;
+  width: 100%;
+  text-align: center;
   color: $color-black;
+  place-items: center;
 
-  &__image {
-    img {
-      width: 327px;
-      height: 262px;
+  &__title {
+    margin: 0;
+    margin-bottom: 40px;
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 40px;
+    text-align: left;
+    color: #06040e;
+
+    @include desktop {
+      margin-bottom: 56px;
+      font-size: 36px;
     }
   }
 
-  &__loginForm {
-    margin: 72px auto;
-    width: 336px;
-    height: 388px;
-
-    h2 {
-      margin: 0;
-      margin-bottom: 56px;
-      font-weight: 500;
-      font-size: 36px;
-      line-height: 40px;
-      text-align: left;
-      color: #06040e;
-    }
-
-    form {
-      position: relative;
-      display: flex;
-      align-items: flex-start;
-      flex-direction: column;
-      width: fill;
-
-      .default.bright {
-        margin-top: 32px;
-        width: 100%;
-      }
-    }
+  &__loginForm-container {
+    margin-top: 56px;
+    width: 327px;
 
     @include desktop {
       margin: 0;
+      width: 336px;
     }
+  }
+
+  &__form {
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    width: fill;
+
+    .button.bright {
+      margin-top: 32px;
+      margin-bottom: 24px;
+      width: 100%;
+    }
+  }
+
+  &__image-container {
+    width: 327px;
+    height: 245px;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  @include desktop {
+    padding: 32px;
   }
 
   @include desktop {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: space-evenly;
 
-    &__image {
-      img {
-        width: 704px;
-        height: 704px;
-      }
+    &__image-container {
+      width: 704px;
+      height: 704px;
     }
   }
 }
