--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,3 +4,4 @@
 @import "../pages/Login/LoginPage";
 @import "../components/form-elements/Field/Field.scss";
 @import "../components/Button/Button.scss";
+@import "../components/Error/Error.scss";
