--- a/src/components/Error/Error.scss
+++ b/src/components/Error/Error.scss
@@ -15,4 +15,15 @@
     font-size: 14px;
     line-height: 20px;
   }
+
+  .button--small {
+    position: relative;
+    width: 9px;
+    height: 9px;
+
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
