--- a/src/pages/Login/LoginPage.scss
+++ b/src/pages/Login/LoginPage.scss
@@ -1,10 +1,9 @@
 .login-page {
   position: relative;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+  display: block;
   padding: 40px 24px;
   width: 100%;
+  height: 100%;
   text-align: center;
   color: $color-black;
   place-items: center;
@@ -24,37 +23,111 @@
     }
   }
 
-  &__loginForm-container {
+  &__login-form-container {
+    position: relative;
     margin-top: 56px;
-    width: 327px;
+    width: 100%;
+    height: 463px;
+
+    .error-message {
+      margin-top: 24px;
+    }
 
     @include desktop {
-      margin: 0;
+      margin-top: 0;
       width: 336px;
+      min-width: 245px;
     }
   }
 
   &__form {
     position: relative;
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-    width: fill;
+    width: 100%;
 
-    .button.bright {
+    .button--bright {
       margin-top: 32px;
-      margin-bottom: 24px;
       width: 100%;
     }
   }
 
+  &__label {
+    display: block;
+    margin-bottom: 8px;
+    color: $color-grey-label;
+  }
+
+  &__input {
+    outline: 1px solid $color-grey-input;
+    border-radius: 6px;
+    padding: 16px;
+    width: 100%;
+    box-sizing: border-box;
+    color: $color-grey-label;
+    transition: all 0.2s ease-in-out;
+    gap: 8px;
+
+    &::placeholder {
+      color: $color-grey-input;
+    }
+
+    &:focus-within {
+      outline: 2px solid $primary-color-default;
+    }
+
+    &[type="password"] {
+      padding: 16px 45px 16px 16px;
+      letter-spacing: 0.125em;
+
+      &::placeholder {
+        letter-spacing: 0;
+        color: $color-grey-input;
+      }
+    }
+  }
+
+  &__field-box {
+    position: relative;
+    margin-bottom: 24px;
+    width: 100%;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.4;
+    text-align: left;
+
+    .button--small {
+      position: absolute;
+      right: 5%;
+      top: 55%;
+      width: 20px;
+      height: 20px;
+      color: $color-grey-input;
+
+      svg:hover {
+        color: $color-grey-label;
+      }
+    }
+  }
+
   &__image-container {
-    width: 327px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 15px;
+    width: 100%;
     height: 245px;
 
     img {
+      position: absolute;
+      left: -50%;
+      right: -50%;
+      top: -50%;
+      bottom: -50%;
+      margin: auto;
       width: 100%;
-      height: 100%;
+      height: auto;
+    }
+
+    @include tablet {
+      height: 400px;
     }
   }
 
@@ -69,6 +142,10 @@
     justify-content: space-evenly;
 
     &__image-container {
+      position: relative;
+      overflow: hidden;
+      margin-right: 70px;
+      border-radius: 15px;
       width: 704px;
       height: 704px;
     }
