--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -1,4 +1,6 @@
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -8,13 +10,17 @@
   font-size: 16px;
   line-height: 24px;
   color: rgb(255 255 255 / 87%);
-  background-color: #242424;
-  color-scheme: light dark;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   text-size-adjust: 100%;
+}
+
+#root {
+  width: 100%;
+  height: 100vh;
+  text-align: center;
 }
 
 input {
@@ -43,28 +49,12 @@ ul {
 }
 
 button {
-  border: 1px solid transparent;
+  margin: 0;
+  border: none;
   border-radius: 8px;
-  padding: 0.6em 1.2em;
-  font-family: inherit;
+  padding: 0;
   font-weight: 500;
-  font-size: 1em;
-  background-color: #1a1a1a;
+  background-color: transparent;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #fff;
-  }
-
-  a:hover {
-    color: #747bff;
-  }
-
-  button {
-    background-color: #f9f9f9;
-  }
+  transition: border-color 0.3s ease-in-out;
 }
