--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,5 +1,17 @@
 .button {
-  &--small {
+  margin: 0;
+  border: none;
+  border-radius: 8px;
+  padding: 0;
+  font-weight: 500;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+
+  &--close {
+    position: relative;
+    width: 9px;
+    height: 9px;
     line-height: 0;
 
     svg {
@@ -8,17 +20,36 @@
     }
   }
 
+  &--eye {
+    position: absolute;
+    right: 5%;
+    bottom: 0;
+    width: 20px;
+    height: 20px;
+    color: $color-grey-input;
+    transform: translateY(-16px);
+
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+
+    svg:hover {
+      color: $color-grey-label;
+    }
+  }
+
   &--bright {
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 16px;
+    width: 100%;
     font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
     font-size: 14px;
     line-height: 20px;
     color: $color-white;
     background-color: $primary-color-default;
-    transition: all 0.3s ease-in-out;
 
     &:hover {
       background-color: $primary-color-hover;
