--- a/src/pages/Login/LoginPage.scss
+++ b/src/pages/Login/LoginPage.scss
@@ -8,6 +8,11 @@
   color: $color-black;
   place-items: center;
 
+  &__error-message {
+    position: absolute;
+    bottom: 0;
+  }
+
   &__title {
     margin: 0;
     margin-bottom: 40px;
@@ -25,29 +30,25 @@
 
   &__login-form-container {
     position: relative;
+    margin: 0;
     margin-top: 56px;
+    padding-bottom: 76px;
     width: 100%;
-    height: 463px;
 
-    .error-message {
-      margin-top: 24px;
+    @include tablet {
+      margin: 56px auto;
+      width: 60%;
     }
 
     @include desktop {
-      margin-top: 0;
-      width: 336px;
-      min-width: 245px;
+      margin: 0;
+      width: 30%;
     }
   }
 
   &__form {
     position: relative;
     width: 100%;
-
-    .button--bright {
-      margin-top: 32px;
-      width: 100%;
-    }
   }
 
   &__label {
@@ -76,10 +77,8 @@
 
     &[type="password"] {
       padding: 16px 45px 16px 16px;
-      letter-spacing: 0.125em;
 
       &::placeholder {
-        letter-spacing: 0;
         color: $color-grey-input;
       }
     }
@@ -87,52 +86,47 @@
 
   &__field-box {
     position: relative;
-    margin-bottom: 24px;
+    margin-bottom: 56px;
     width: 100%;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.4;
     text-align: left;
 
-    .button--small {
-      position: absolute;
-      right: 5%;
-      top: 55%;
-      width: 20px;
-      height: 20px;
-      color: $color-grey-input;
-
-      svg:hover {
-        color: $color-grey-label;
-      }
+    &:first-child {
+      margin-bottom: 24px;
     }
   }
 
   &__image-container {
     position: relative;
     overflow: hidden;
-    border-radius: 15px;
+    border-radius: 32px;
     width: 100%;
-    height: 245px;
+    height: 30%;
+    aspect-ratio: 16/9;
 
     img {
-      position: absolute;
-      left: -50%;
-      right: -50%;
-      top: -50%;
-      bottom: -50%;
-      margin: auto;
+      display: block;
       width: 100%;
-      height: auto;
+      height: 100%;
+      object-fit: cover;
     }
 
     @include tablet {
-      height: 400px;
+      margin: 0 auto;
+      width: 60%;
+      height: 40%;
+      aspect-ratio: 16/9;
     }
-  }
 
-  @include desktop {
-    padding: 32px;
+    @include desktop {
+      margin: 0;
+      margin-right: 60px;
+      width: auto;
+      height: 100%;
+      aspect-ratio: 1;
+    }
   }
 
   @include desktop {
@@ -140,14 +134,6 @@
     align-items: center;
     flex-direction: row;
     justify-content: space-evenly;
-
-    &__image-container {
-      position: relative;
-      overflow: hidden;
-      margin-right: 70px;
-      border-radius: 15px;
-      width: 704px;
-      height: 704px;
-    }
+    padding: 32px;
   }
 }
