--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,3 +6,4 @@ $primary-color-disable: #4318f280;
 $primary-color-default: #4315f2;
 $primary-color-hover: #5d35ff;
 $error-color: #ea334d;
+$login-page-image__desktop-max-width: 704px;
