--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import "breakpoints";
 @import "globals";
 @import "variables";
+@import "mixins";
 @import "../pages/Login/LoginPage";
 @import "../components/Button/Button.scss";
 @import "../components/Error/Error.scss";
