--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,3 +5,4 @@
 @import "../pages/Login/LoginPage";
 @import "../components/Button/Button.scss";
 @import "../components/Error/Error.scss";
+@import "../components/LoginForm/LoginForm.scss";
