--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -2,7 +2,7 @@
   @include reset-button;
 
   border-radius: 8px;
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: inherit;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.4;
