--- a/src/pages/Login/LoginPage.scss
+++ b/src/pages/Login/LoginPage.scss
@@ -1,3 +1,54 @@
 .login-page {
-    color: $color-black;
+  $this: &;
+
+  position: relative;
+  display: block;
+  padding: 40px 24px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  color: $color-black;
+  place-items: center;
+
+  &__image {
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  &__image-container {
+    position: relative;
+    overflow: hidden;
+    border-radius: 32px;
+    width: 100%;
+    max-height: 30%;
+    aspect-ratio: 16/9;
+
+    @include tablet {
+      margin: 0 auto;
+      width: 60%;
+      max-height: 40%;
+      aspect-ratio: 16/9;
+    }
+
+    @include desktop {
+      margin: 0;
+      margin-right: 60px;
+      width: 50%;
+      max-height: 100%;
+      aspect-ratio: 1;
+    }
+  }
+
+  @include desktop {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 32px;
+  }
 }
