--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -9,3 +9,17 @@
   padding: 0;
   cursor: pointer;
 }
+
+@mixin icon-container($height, $width, $color) {
+  position: relative;
+  width: $width;
+  height: $height;
+  line-height: 0;
+  color: $color;
+  transition: all 0.3s ease-in-out;
+
+  svg {
+    width: 100%;
+    height: 100%;
+  }
+}
