--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,3 +6,4 @@
 @import "../components/Button/Button.scss";
 @import "../components/Error/Error.scss";
 @import "../pages/Login/components/LoginForm/LoginForm.scss";
+@import "../components/Header/Header.scss";
