--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,12 +3,17 @@
   left: 0;
   top: 0;
   z-index: 10;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px 32px;
+  padding: 16px 24px;
   width: 100%;
+  box-shadow: 1px 4px 16px rgb(180 173 189 / 15%);
   background-color: $color-white;
+
+  &__container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 
   &__arrow-icon-container {
     @include icon-container(12px,6px,$color-grey-input);
@@ -22,6 +27,12 @@
     &:hover {
       .header__arrow-icon-container {
         color: $color-grey-label;
+      }
+    }
+
+    &:active {
+      .header__arrow-icon-container {
+        transform: translateY(3px);
       }
     }
   }
@@ -43,23 +54,27 @@
     height: 100%;
   }
 
-  &__popup {
-    position: absolute;
-    right: 32px;
-    top: 70px;
-    border-radius: 6px;
-    padding: 8px;
-    width: 208px;
-    height: 48px;
-    box-shadow: 1px 4px 16px rgb(180 173 189 / 15%);
-    background-color: $color-white;
-  }
-
   &__popup-container {
+    position: relative;
     display: flex;
     align-items: center;
-    padding: 7px 19px;
+    margin-top: 16px;
+    padding: 8px 0;
     width: 100%;
+    width: 100%;
+    background-color: $color-white;
+
+    @include desktop {
+      position: absolute;
+      right: 32px;
+      top: 70px;
+      margin: 0;
+      border-radius: 6px;
+      padding: 15px 27px;
+      width: 208px;
+      height: 48px;
+      box-shadow: 1px 4px 16px rgb(180 173 189 / 15%);
+    }
   }
 
   &__logout-icon-container {
@@ -72,5 +87,10 @@
     font-weight: 500;
     line-height: 1.3;
     color: $color-grey-label;
+  }
+
+  @include desktop {
+    padding: 20px 32px;
+    box-shadow: none;
   }
 }
