--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,11 @@
 @import "globals";
 @import "variables";
 @import "mixins";
+
+// components
+@import "../components//Layout/Layout";
+
+// pages
 @import "../pages/Login/LoginPage.scss";
 @import "../components/Button/Button.scss";
 @import "../components/Error/Error.scss";
