--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -42,8 +42,15 @@ body {
   font-family: var(font-family);
 }
 
-ul {
-  list-style-type: none;
-  margin: 0;
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+  margin: -1px;
+  border: 0;
   padding: 0;
+  width: 1px;
+  height: 1px;
+  white-space: nowrap;
+  clip-path: inset(100%);
 }
