--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,12 @@
+// Layout variables
+$side-paddings-mobile: 24px;
+$side-paddings-desktop: 32px;
+
+// need to approve the following two figures with the designer
+$top-menu-height: 64px;
+$container-max-width: 1200px;
+
+// Color variables
 $color-black: #000;
 $color-white: #fff;
 $color-grey-label: #7f7d85;
