--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,9 @@
 @import "breakpoints";
-@import "globals";
 @import "variables";
+@import "globals";
 @import "mixins";
+
+// pages
 @import "../pages/Login/LoginPage.scss";
 @import "../components/Button/Button.scss";
 @import "../components/Error/Error.scss";
