feat(create-gallery-page): #861mh296p: new page, global layout styles, custom scrollbar

--- a/src/pages/Login/components/LoginForm/LoginForm.scss
+++ b/src/pages/Login/components/LoginForm/LoginForm.scss
@@ -5,6 +5,10 @@
   padding-bottom: 76px;
   width: 100%;
 
+  &__submit-btn {
+    width: 100%;
+  }
+
   &__title {
     margin: 0;
     margin-bottom: 40px;
