--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -14,7 +14,7 @@ html::-webkit-scrollbar-track {
 
 html::-webkit-scrollbar-thumb {
   border-radius: 5px;
-  background: $primary-color-default;
+  background: $color-grey-input;
 }
 
 :root {
