--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -30,6 +30,14 @@ html::-webkit-scrollbar-thumb {
   text-size-adjust: 100%;
 }
 
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
+}
+
 #root {
   width: 100%;
   height: 100vh;
@@ -71,18 +79,13 @@ body {
 .main {
   display: flex;
   flex-direction: column;
-
-  // Calls the scroll bar
-  // margin-top: $top-menu-height;
   min-height: 100vh;
 }
 
 .container {
   margin-right: auto;
   margin-left: auto;
-
-  // There is no padding in the design on the mobile create-gallery-page
-  // padding: 0 $side-paddings-mobile;
+  padding: 0 $side-paddings-mobile;
   width: 100%;
   max-width: $container-max-width;
 
