--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,6 @@
 // Layout variables
 $side-paddings-mobile: 24px;
+$side-paddings-mobile-minus: -24px;
 $side-paddings-desktop: 32px;
 
 // need to approve the following two figures with the designer
