--- a/src/pages/CreateGallery/CreateGalleryPage.scss
+++ b/src/pages/CreateGallery/CreateGalleryPage.scss
@@ -20,7 +20,7 @@
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    margin: 0 -24px;
+    margin: 0 calc($side-paddings-mobile * -1);
     margin-bottom: 56px;
   }
 
@@ -66,7 +66,7 @@
     width: 186px;
   }
 
-  &__decription {
+  &__description {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.4;
