--- a/src/pages/CreateGallery/CreateGalleryPage.scss
+++ b/src/pages/CreateGallery/CreateGalleryPage.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-top: 65px;
+  padding-top: $top-menu-height;
   min-height: 100vh;
 
   &__text {
