--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -34,7 +34,8 @@ h1,
 h2,
 h3,
 h4,
-p {
+p,
+span {
   margin: 0;
 }
 
@@ -83,11 +84,8 @@ body {
 }
 
 .container {
-  margin-right: auto;
-  margin-left: auto;
   padding: 0 $side-paddings-mobile;
   width: 100%;
-  max-width: $container-max-width;
 
   @include desktop {
     padding: 0 $side-paddings-desktop;
