--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,8 @@ $color-black: #000;
 $color-white: #fff;
 $color-grey-label: #7f7d85;
 $color-grey-input: #d2d0dc;
+$color-grey-light-200: #e8e7ed;
+$color-grey-light-100: #f9f9fc;
 $primary-color-disable: #4318f280;
 $primary-color-default: #4315f2;
 $primary-color-hover: #5d35ff;
