--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,8 +5,12 @@
 
 // pages
 @import "../pages/Login/LoginPage.scss";
+@import "../pages/CreateGallery/CreateGalleryPage.scss";
+@import "../pages/Gallery/Gallery.scss";
+@import "../pages/Login/components/LoginForm/LoginForm.scss";
+
+// components
 @import "../components/Button/Button.scss";
 @import "../components/Error/Error.scss";
-@import "../pages/Login/components/LoginForm/LoginForm.scss";
 @import "../components/Header/Header.scss";
-@import "../pages/CreateGallery/CreateGalleryPage.scss";
+@import "../components/Breadcrumb/Breadcrumb.scss";
