feat(galleries): #861mh296p: add first version of GalleryCard component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,3 +9,4 @@
 @import "../components/Error/Error.scss";
 @import "../pages/Login/components/LoginForm/LoginForm.scss";
 @import "../components/Header/Header.scss";
+@import "../pages/Galleries/GalleryCard/GalleryCard.scss";
