--- a/src/components/Breadcrumb/Breadcrumb.scss
+++ b/src/components/Breadcrumb/Breadcrumb.scss
@@ -1,4 +1,4 @@
-.breadcrumb {
+.breadcrumbs {
   $this: &;
 
   display: flex;
@@ -6,14 +6,14 @@
   margin: 16px 0 28px;
   width: 100%;
 
-  &__crumb {
+  &__item {
     position: relative;
     display: flex;
     align-items: center;
     margin-right: 15px;
 
     &:last-child {
-      #{$this}__icon-container {
+      #{$this}__icon {
         display: none;
       }
       #{$this}__link {
@@ -32,7 +32,7 @@
     color: $color-grey-input;
   }
 
-  &__icon-container {
+  &__icon {
     @include icon-container(12px,7px,$color-grey-label);
 
     flex: none;
