--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,15 +2,16 @@
 @import "variables";
 @import "globals";
 @import "mixins";
+@import "buttons";
 
 // pages
-@import "../pages/Login/LoginPage.scss";
-@import "../pages/CreateGallery/CreateGalleryPage.scss";
-@import "../pages/Gallery/Gallery.scss";
-@import "../pages/Login/components/LoginForm/LoginForm.scss";
+@import "../pages/LoginPage/LoginPage.scss";
+@import "../pages/LoginPage/components/LoginForm/LoginForm.scss";
+@import "../pages/Gallery/GalleryPage.scss";
+@import "../pages/Gallery/components/EmptyGallery/EmptyGallery.scss";
+@import "../pages/Gallery/components/Gallery/Gallery.scss";
 
 // components
-@import "../components/Button/Button.scss";
 @import "../components/Error/Error.scss";
 @import "../components/Header/Header.scss";
 @import "../components/Breadcrumb/Breadcrumb.scss";
