--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable no-descending-specificity */
 .button {
   $this: &;
 
@@ -11,17 +12,32 @@
   background-color: transparent;
   transition: all 0.3s ease-in-out;
 
-  &__title {
-    margin-right: 9px;
+  &--light {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    outline: 1px solid $color-grey-light-200;
+    padding: 16px 24px;
     width: 100%;
-    text-align: left;
-    color: $color-black;
-  }
+    max-width: 288px;
+    transition: all 0.3s ease-in-out;
 
-  &__icon-container {
-    @include icon-container(14px,14px,$color-grey-label);
+    svg {
+      @include icon(14px,14px,$color-grey-label);
 
-    flex: none;
+      flex: none;
+    }
+
+    &:hover {
+      background-color: $color-grey-light-100;
+
+      svg {
+        color: $color-black;
+        transform: rotate(180deg);
+        transition: color 0.3s ease-in-out;
+        transition: transform 0.5s ease-in-out;
+      }
+    }
   }
 
   &--close {
@@ -70,29 +86,6 @@
     &[disabled] {
       background-color: $primary-color-disable;
       pointer-events: none;
-    }
-  }
-
-  &--light {
-    display: flex;
-    align-items: center;
-    outline: 1px solid $color-grey-light-200;
-    padding: 16px 24px;
-    width: 100%;
-    max-width: 288px;
-    transition: all 0.3s ease-in-out;
-
-    &:hover {
-      background-color: $color-grey-light-100;
-      #{$this}__icon-container {
-        color: $color-black;
-        transition: color 0.3s ease-in-out;
-
-        svg {
-          transform: rotate(180deg);
-          transition: transform 0.5s ease-in-out;
-        }
-      }
     }
   }
 }
