--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,16 +5,14 @@
 @import "buttons";
 
 // pages
-@import "../pages/LoginPage/LoginPage.scss";
-@import "../pages/LoginPage/components/LoginForm/LoginForm.scss";
+@import "../pages/Login/LoginPage.scss";
+@import "../pages/Login/components/LoginForm/LoginForm.scss";
 @import "../pages/Gallery/components/CreateGallery/CreateGallery.scss";
 @import "../pages/Gallery/components/Gallery/Gallery.scss";
 
 // components
 @import "../components/Error/Error.scss";
 @import "../components/Header/Header.scss";
-
 @import "../components/Breadcrumbs/Breadcrumbs.scss";
-@import "../pages/CreateGallery/CreateGalleryPage.scss";
+@import "../pages/Gallery/components/CreateGallery/CreateGallery.scss";
 @import "../pages/Galleries/components/GalleryCard/GalleryCard.scss";
-
