refactor(galleries): #861mjdjb1: move all components related to galleries into Galleries folder

--- a/src/pages/Galleries/components/GalleriesList/GalleriesList.scss
+++ b/src/pages/Galleries/components/GalleriesList/GalleriesList.scss
@@ -1,8 +1,8 @@
-.gallery {
+.galleries-list {
   padding-top: $top-menu-height;
   min-height: 100vh;
 
-  &__container {
+  &__list {
     display: grid;
     margin-top: 20px;
     gap: 16px;
@@ -14,7 +14,7 @@
     }
   }
 
-  &__card {
+  &__item {
     width: 156px;
     height: 164px;
     background-color: $color-grey-light-200;
