feat(galleries): #861mk5p2q: add notification to restore gallery after deleting

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -17,4 +17,9 @@ $primary-color-disable: #4318f280;
 $primary-color-default: #4315f2;
 $primary-color-hover: #5d35ff;
 $error-color: #ea334d;
+
+// Z-index variables
 $layer-header: 100;
+
+// Animation variables
+$default-transition: color 0.3s ease-in-out;
