--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,3 +15,4 @@
 @import "../pages/Galleries/components/NoGalleries/NoGalleries.scss";
 @import "../pages/Galleries/components/GalleryCard/GalleryCard.scss";
 @import "../pages/Galleries/components/GalleriesList/GalleriesList.scss";
+@import "../pages/Galleries/components/RestoreDeletedGallery/RestoreDeletedGallery.scss";
