--- a/src/pages/Galleries/components/GalleryCard/GalleryCard.scss
+++ b/src/pages/Galleries/components/GalleryCard/GalleryCard.scss
@@ -1,7 +1,7 @@
 .gallery-card {
   margin-top: 100px;
   width: 155px;
-  color: #000;
+  color: $color-black;
 
   &__image-container {
     position: relative;
