--- a/src/pages/Galleries/components/NoGalleries/NoGalleries.scss
+++ b/src/pages/Galleries/components/NoGalleries/NoGalleries.scss
@@ -10,7 +10,6 @@
     position: relative;
     display: inline-block;
     margin-bottom: 32px;
-    text-align: center;
   }
 
   &__image-row {
@@ -55,7 +54,6 @@
   &__title {
     margin-bottom: 16px;
     min-width: 100%;
-    font-weight: 500;
     font-size: 22px;
     line-height: 1.5;
     color: $color-black;
@@ -67,10 +65,6 @@
   }
 
   &__description {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.4;
-    text-align: center;
-    color: $color-grey-label;
+    color: $color-dark-grey;
   }
 }
