--- a/src/pages/Galleries/components/RestoreDeletedGallery/RestoreDeletedGallery.scss
+++ b/src/pages/Galleries/components/RestoreDeletedGallery/RestoreDeletedGallery.scss
@@ -7,18 +7,13 @@
   box-shadow: 1px 4px 16px rgb(180 173 189 / 15%);
   transform: translateX(-50%);
 
-  &__text {
-    font-weight: 500;
-    font-size: 14px;
-  }
-
   &__button {
     margin-left: 10px;
     color: $primary-color-default;
 
     &:hover {
       color: $primary-color-hover;
-      transition: $default-transition;
+      transition: color $default-transition;
     }
   }
 
