--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -4,30 +4,27 @@
   box-sizing: border-box;
 }
 
-html::-webkit-scrollbar {
-  width: 5px;
-}
-
-html::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-html::-webkit-scrollbar-thumb {
-  border-radius: 5px;
-  background: $color-grey-input;
-}
-
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  color: rgb(255 255 255 / 87%);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.4;
+  color: $color-black;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   text-size-adjust: 100%;
+}
+
+#root {
+  width: 100%;
+  height: 100vh;
+  text-align: center;
+}
+
+body {
+  margin: 0;
 }
 
 h1,
@@ -37,31 +34,6 @@ h4,
 p {
   margin: 0;
   padding: 0;
-}
-
-#root {
-  width: 100%;
-  height: 100vh;
-  text-align: center;
-}
-
-input {
-  all: unset;
-}
-
-a {
-  font-weight: 500;
-  text-decoration: inherit;
-  color: #646cff;
-}
-
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  font-family: var(font-family);
 }
 
 .visually-hidden {
@@ -90,4 +62,25 @@ body {
   @include desktop {
     padding: 0 $side-paddings-desktop;
   }
+}
+
+input {
+  all: unset;
+}
+
+a {
+  text-decoration: inherit;
+}
+
+html::-webkit-scrollbar {
+  width: 5px;
+}
+
+html::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+html::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background: $color-medium-grey;
 }
