--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -19,8 +19,13 @@
     outline: 1px solid $color-grey-light-200;
     padding: 16px 24px;
     width: 100%;
+    min-height: 48px;
     max-width: 288px;
     transition: all 0.3s ease-in-out;
+
+    span {
+      line-height: 0;
+    }
 
     svg {
       @include icon(14px,14px,$color-grey-label);
