--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -9,7 +9,7 @@
 .loader::before {
   content: "";
   position: absolute;
-  border: 2px solid #fff;
+  border: 2px solid $color-white;
   border-radius: 50%;
   box-sizing: border-box;
   animation: prixClipFix 2s linear infinite;
