feat(metric page): #85zrv2dp4: add circle bar component, similar card item and metric page

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,7 @@
 // pages
 @import "../pages/Login/LoginPage.scss";
 @import "../pages/Galleries/components/RestoreDeletedGallery/RestoreDeletedGallery.scss";
+@import "../pages/Metrics/MetricsPage.scss";
 
 // components
 @import "../components/Error/Error.scss";
@@ -16,4 +17,6 @@
 @import "../pages/Galleries/components/NoGalleries/NoGalleries.scss";
 @import "../pages/Galleries/components/GalleryCard/GalleryCard.scss";
 @import "../pages/Galleries/components/GalleriesList/GalleriesList.scss";
+@import "../components/CircleProgressBar/CircleProgressBar.scss";
+@import "../pages/Metrics/components/MetricsSimilarCard/MetricsSimilarCard.scss";
 @import "../components/Loader/Loader.scss";
