--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,7 @@ $color-black: #06040e;
 $color-white: #fff;
 $color-dark-grey: #7f7d85;
 $color-medium-grey: #d2d0dc;
+$color-grey-light-300: #f1effc;
 $color-grey-light-200: #e8e7ed;
 $color-grey-light-100: #f9f9fc;
 $primary-color-disable: #4318f280;
