feat(metric page): #85zrv2dp4: add loaders

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,6 +14,7 @@ $color-medium-grey: #d2d0dc;
 $color-grey-light-300: #f1effc;
 $color-grey-light-200: #e8e7ed;
 $color-grey-light-100: #f9f9fc;
+$color-grey-light-400: #b7b5c2;
 $primary-color-disable: #4318f280;
 $primary-color-default: #4315f2;
 $primary-color-hover: #5d35ff;
