--- a/src/pages/Metrics/MetricsPage.scss
+++ b/src/pages/Metrics/MetricsPage.scss
@@ -22,6 +22,7 @@
   &__metric {
     display: flex;
     flex-direction: column;
+    width: 100%;
   }
 
   &__title {
@@ -182,5 +183,167 @@
       font-size: 12px;
       color: $color-dark-grey;
     }
+  }
+
+  &__loader-container {
+    margin-left: 30px;
+    width: 100%;
+    max-width: 70%;
+    text-align: left;
+  }
+
+  &__image-loader-text {
+    position: relative;
+    display: inline-block;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.2;
+    color: $color-grey-light-400;
+
+    &::after {
+      content: "";
+      position: absolute;
+      right: -3px;
+      bottom: 4px;
+      border-radius: 50%;
+      width: 2px;
+      height: 2px;
+      box-sizing: border-box;
+      background: currentColor;
+      animation: animloader 1s linear infinite;
+    }
+  }
+
+  &__loader--default {
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+    border-radius: 4px;
+    width: 100%;
+    height: 8px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 8px;
+      box-sizing: border-box;
+      background: linear-gradient(90deg, #f9f9fc 0%, #d2d0dc 100%, #d2d0dc 100%);
+      animation: defaultLoader 2s linear infinite;
+    }
+  }
+
+  &__loader--purple {
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+    border-radius: 4px;
+    width: 100%;
+    height: 4.8px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 4.8px;
+      box-sizing: border-box;
+      background: linear-gradient(90deg, #6349ea 0%, #bcacff 100%);
+      animation: defaultLoader 2s linear infinite;
+    }
+  }
+
+  &__image-loader-container {
+    display: flex;
+    align-items: center;
+    flex: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 72px;
+    height: 52px;
+  }
+
+  &__image-loader {
+    position: relative;
+    overflow: hidden;
+    border-radius: 7px;
+    width: 32px;
+    height: 32px;
+    background-color: $color-grey-light-300;
+
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      border-radius: 3px;
+      width: 20px;
+      height: 20px;
+      box-shadow: 16px -15px 0 5px $primary-color-default;
+      background: $primary-color-disable;
+      transform: rotate(45deg) translate(30%, 40%);
+      animation: slide 3s infinite ease-in-out alternate;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      left: 10px;
+      top: 7px;
+      border-radius: 50%;
+      width: 8px;
+      height: 8px;
+      background: $primary-color-hover;
+      transform: rotate(0deg);
+      transform-origin: 35px 145px;
+      animation: sunRotate 3s infinite ease-in-out;
+    }
+  }
+
+  @keyframes defaultLoader {
+    0% {
+      left: 0;
+      transform: translateX(-100%);
+    }
+
+    100% {
+      left: 100%;
+      transform: translateX(0%);
+    }
+  }
+
+  @keyframes animloader {
+    0% {
+      box-shadow: 5px 0 rgb(255 255 255 / 0%), 10px 0 rgb(255 255 255 / 0%);
+    }
+
+    50% {
+      box-shadow: 5px 0 $color-dark-grey, 10px 0 rgb(255 255 255 / 0%);
+    }
+
+    100% {
+      box-shadow: 5px 0 $color-dark-grey, 10px 0 $color-dark-grey;
+    }
+  }
+
+  @keyframes slide {
+    0% { bottom: -35px; }
+    100% { bottom: -35px; }
+
+    25% { bottom: -2px; }
+    75% { bottom: -2px; }
+
+    20% { bottom: 2px; }
+    80% { bottom: 2px; }
+  }
+
+  @keyframes sunRotate {
+    0% { transform: rotate(-15deg); }
+    25% { transform: rotate(0deg); }
+    75% { transform: rotate(0deg); }
+    100% { transform: rotate(25deg); }
   }
 }
