--- a/src/pages/Metrics/MetricsPage.scss
+++ b/src/pages/Metrics/MetricsPage.scss
@@ -5,24 +5,50 @@
   padding-top: $top-menu-height;
   min-height: 100vh;
 
+  &__wrapper {
+    @include desktop {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+    }
+  }
+
   &__container {
-    display: flex;
-    justify-content: space-between;
+    display: block;
+
+    @include desktop {
+      display: flex;
+      justify-content: space-between;
+    }
   }
 
   &__image-container {
-    margin-right: 48px;
-    width: 448px;
+    @include desktop {
+      margin-right: 48px;
+      width: 100%;
+      max-width: 448px;
+    }
   }
 
   &__image {
     @include noselect;
+
+    width: 100%;
+
+    @include tablet {
+      width: none;
+    }
   }
 
   &__metric {
     display: flex;
     flex-direction: column;
+    margin-top: 24px;
     width: 100%;
+
+    @include desktop {
+      margin-top: 0;
+    }
   }
 
   &__title {
@@ -41,15 +67,23 @@
     display: flex;
     align-items: center;
     border-radius: 20px;
-    padding: 16px 24px;
+    padding: 16px;
     box-shadow: 1px 4px 16px rgb(180 173 189 / 15%);
+
+    @include desktop {
+      padding: 16px 24px;
+    }
   }
 
   &__stroke-bars {
     display: flex;
     flex-direction: column;
-    margin-left: 48px;
+    margin-left: 24px;
     width: 100%;
+
+    @include desktop {
+      margin-left: 48px;
+    }
   }
 
   &__box {
@@ -127,15 +161,12 @@
   }
 
   &__similar-photos {
-    overflow-y: scroll;
-    margin-left: 48px;
-    border-left: 2px solid $color-grey-light-100;
-    padding-left: 32px;
-    min-width: 224px;
+    position: relative;
 
-    &::-webkit-scrollbar {
-      display: none;
-      width: 5px;
+    @include desktop {
+      margin-left: 48px;
+      border-left: 2px solid $color-grey-light-100;
+      padding-left: 32px;
     }
   }
 
@@ -152,19 +183,23 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    width: 100%;
     height: 100%;
     min-width: 224px;
-    max-width: 224px;
   }
 
   &__similar-photos-full-container {
     display: flex;
     align-items: center;
     flex-direction: column;
+    overflow-y: scroll;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     min-width: 224px;
-    max-width: 224px;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   &__bar-progress {
@@ -227,6 +262,7 @@
       position: absolute;
       left: 0;
       top: 0;
+      border-radius: 4px;
       width: 100%;
       height: 8px;
       box-sizing: border-box;
@@ -248,6 +284,7 @@
       position: absolute;
       left: 0;
       top: 0;
+      border-radius: 4px;
       width: 100%;
       height: 4.8px;
       box-sizing: border-box;
