--- a/src/pages/Metrics/MetricsPage.scss
+++ b/src/pages/Metrics/MetricsPage.scss
@@ -194,7 +194,7 @@
     flex-direction: column;
     overflow-y: scroll;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 224px);
     min-width: 224px;
 
     &::-webkit-scrollbar {
