refactor: remove mobile similar card scroll, replace card list and change some styles

--- a/src/components/Breadcrumbs/Breadcrumbs.scss
+++ b/src/components/Breadcrumbs/Breadcrumbs.scss
@@ -32,7 +32,7 @@
   }
 
   &__icon {
-    @include icon(12px,7px,$color-dark-grey);
+    @include icon(12px,7px,$color-medium-grey);
 
     flex: none;
   }
