--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,4 +19,5 @@
 @import "../pages/Galleries/components/GalleriesList/GalleriesList.scss";
 @import "../components/CircleProgressBar/CircleProgressBar.scss";
 @import "../pages/Metrics/components/MetricsSimilarCard/MetricsSimilarCard.scss";
+@import "../pages/Metrics/components/MetricsSimilarList/MetricsSimilarList.scss";
 @import "../components/Loader/Loader.scss";
