--- a/src/pages/Metrics/components/MetricsSimilarList/MetricsSimilarList.scss
+++ b/src/pages/Metrics/components/MetricsSimilarList/MetricsSimilarList.scss
@@ -1,4 +1,4 @@
-.similar-photos {
+.metrics-similar-photos {
   position: relative;
 
   &__title {
@@ -27,10 +27,15 @@
     min-width: 224px;
   }
 
+  &__empty-loader-svg {
+    margin-bottom: 24px;
+  }
+
   &__full-container {
     display: flex;
     align-items: center;
     flex-direction: column;
+    padding-left: 0;
     width: 100%;
     height: calc(100vh - 224px);
     min-width: 224px;
