--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,4 +16,5 @@
 @import "../pages/Galleries/components/NoGalleries/NoGalleries.scss";
 @import "../pages/Galleries/components/GalleryCard/GalleryCard.scss";
 @import "../pages/Galleries/components/GalleriesList/GalleriesList.scss";
+@import "../pages/Galleries/GalleriesPage.scss";
 @import "../components/Loader/Loader.scss";
