--- a/src/pages/Galleries/components/GalleryCard/GalleryCard.scss
+++ b/src/pages/Galleries/components/GalleryCard/GalleryCard.scss
@@ -1,28 +1,16 @@
 .gallery-card {
-  margin-top: 100px;
-  width: 155px;
-  color: $color-black;
+  $this: &;
 
   &__image-container {
     position: relative;
     width: 100%;
-    aspect-ratio: 155/116;
-  }
-
-  &__image {
-    position: absolute;
-    left: 0;
-    top: 0;
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
   }
 
   &__inner {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 8px 8px 0 0;
   }
 
   &__wrapper {
@@ -36,6 +24,77 @@
     svg {
       width: 16px;
       height: 18px;
+    }
+  }
+
+  &__input {
+    width: 100%;
+  }
+
+  &__name {
+    font-size: 14px;
+  }
+
+  &__count {
+    margin-top: 4px;
+    font-size: 12px;
+    color: $color-dark-grey;
+  }
+
+  &__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  &__collage {
+    display: grid;
+    grid-column-gap: 2px;
+    grid-row-gap: 2px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+
+    #{$this}__image {
+      position: static;
+      aspect-ratio: 96/72;
+    }
+
+    #{$this}__image:first-child {
+      border-top-left-radius: 8px;
+      grid-area: 1 / 1 / 2 / 2;
+    }
+
+    #{$this}__image:nth-child(2) {
+      border-top-right-radius: 8px;
+      grid-area: 1 / 2 / 2 / 3;
+    }
+
+    #{$this}__image:nth-child(3) {
+      border-bottom-left-radius: 8px;
+      grid-area: 2 / 1 / 3 / 2;
+    }
+
+    #{$this}__image:last-child {
+      border-bottom-right-radius: 8px;
+      grid-area: 2 / 2 / 3 / 3;
+    }
+  }
+
+  &--single-photo-preview {
+    #{$this}__image-container {
+      overflow: hidden;
+      border-radius: 8px;
+      aspect-ratio: 155/116;
+    }
+
+    #{$this}__collage {
+      display: block;
+    }
+
+    #{$this}__image {
+      position: absolute;
+      left: 0;
+      top: 0;
     }
   }
 
