--- a/src/pages/Metrics/MetricsPage.scss
+++ b/src/pages/Metrics/MetricsPage.scss
@@ -1,7 +1,5 @@
 .metrics-page {
   position: relative;
-  display: flex;
-  flex-direction: column;
   padding-top: $top-menu-height;
   min-height: 100vh;
 
@@ -10,6 +8,7 @@
       display: flex;
       justify-content: space-between;
       width: 100%;
+      height: 86vh;
     }
   }
 
