style: reset ul list and change mobile margins

--- a/src/pages/Metrics/components/MetricsSimilarList/MetricsSimilarList.scss
+++ b/src/pages/Metrics/components/MetricsSimilarList/MetricsSimilarList.scss
@@ -33,6 +33,8 @@
   }
 
   &__full-container {
+    @include reset-list;
+
     display: flex;
     align-items: center;
     flex-direction: column;
