--- a/src/pages/Metrics/components/MetricsSimilarCard/MetricsSimilarCard.scss
+++ b/src/pages/Metrics/components/MetricsSimilarCard/MetricsSimilarCard.scss
@@ -1,6 +1,6 @@
 .metric-similar-card {
   position: relative;
-  margin-bottom: 24px;
+  margin-bottom: 16px;
   width: 100%;
 
   &__image-container {
@@ -12,18 +12,27 @@
   }
 
   &__subtitle {
-    margin: 12px 0 8px;
+    margin: 12px 0 4px;
     text-align: left;
     color: $color-dark-grey;
+
+    @include desktop {
+      margin: 12px 0 8px;
+    }
   }
 
   &__tag {
-    margin-right: 8px;
-    margin-bottom: 8px;
+    margin-top: 4px;
+    margin-right: 4px;
     border-radius: 8px;
     padding: 4px 8px;
     line-height: 1.2;
     background-color: $color-grey-light-100;
+
+    @include desktop {
+      margin-top: 8px;
+      margin-right: 8px;
+    }
   }
 
   &__tags {
@@ -61,8 +70,13 @@
     }
   }
 
+  &:last-child {
+    margin-bottom: 32px;
+  }
+
   @include desktop {
     flex: none;
+    margin-bottom: 24px;
     min-width: 224px;
 
     &:last-child {
